--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@
     --bg: #f4f8ee;
     --fg: #000500;
     --muted: #2b2b3d;
-    --accent: #420313;
+    --accent: #162e33;
     --color: #eff8e2;
     margin: 20px;
     --cards: linear-gradient(135deg, hsl(85, 61%, 93%), hsla(120, 1%, 28%, 0.4));
@@ -14,7 +14,7 @@
     --muted: #000500;
     --accent: #eff8e2;
     --color: #000500;
-    --cards: linear-gradient(135deg, hsl(345, 91%, 14%), hsla(90, 1%, 28%, 0.91));
+    --cards: linear-gradient(135deg, hsl(190, 40%, 14%), hsla(90, 1%, 28%, 0.91));
 }
 
 *{
