--- a/assignment-2/src/components/projects/Projects.css
+++ b/assignment-2/src/components/projects/Projects.css
@@ -1,13 +1,17 @@
 .container-projects {
-    padding: 60px 20px;
-    background-color: #fff;
+    padding: 20px 20px;
+    background: linear-gradient(135deg, rgba(224, 234, 252, 0.11), rgba(231, 239, 255, 0.08));
     text-align: center;
+    width: 90%;
+    max-width: 800px;
+    border-radius: 20px;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.1);
 }
 
 .container-projects h3 {
     font-size: 2rem;
     margin-bottom: 40px;
-    color: #333;
+    color: #ffffff;
 }
 
 .project-grid {
@@ -18,8 +22,8 @@
 }
 
 .project-card {
-    background-color: #fff;
-    border-radius: 12px;
+    background: linear-gradient(135deg, rgba(224, 234, 252, 0.49), rgba(183, 201, 234, 0.3));
+    border-radius: 50px;
     box-shadow: 0 4px 12px rgba(0,0,0,0.1);
     padding: 20px;
     text-align: center;
@@ -35,11 +39,11 @@
 
 .project-card h4 {
     margin: 10px 0;
-    color: #222;
+    color: #fcfcfc;
 }
 
 .project-card p {
-    color: #555;
+    color: #ffffff;
     font-size: 0.95rem;
 }
 
